--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
         <div class="content">
             <h1>Welcome To Cutley........Your Only Destination For Tasty Foods</h1>
         
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni fugiat rerum nostrum dolores impedit harum sunt reprehenderit suscipit nisi temporibus.</h3>
+            <h3 class="hideornot">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni fugiat rerum nostrum dolores impedit harum sunt reprehenderit suscipit nisi temporibus.</h3>
             <div class="btn">
-            <button>Explore Menu.....</button>
+            <button class="hideornot">Explore Menu.....</button>
 
             </div>
                     </div>
     </div>
    </header>
    <main>
+    <div class="centerbtn">
+
+        <button>Explore Menu.....</button>
+    </div>
     <h1>Categories</h1>
     <div class="category">
         <div class="container">
