--- a/index.html
+++ b/index.html
@@ -151,10 +151,11 @@
    </main>
    <footer>
     <h4 style="text-align: center;">Copyright &copy; 2023. All Rights Reserved.</h4>
-    <br>
+   <h4 style="text-align:center;">Developer: <span style="color:crimson">PRABHJOT ARORA</span></h4>
+       <br>
     <div class="footer">
         <div class="container">
-            <h3>Subscribe to our newsletter.</h3>
+         <h3>Subscribe to our newsletter.</h3>
             <div class="form">
                 <input type="email" style="padding: 0.4rem;border-radius: 1.2rem;" placeholder="Your email address.">
                 <button style="font-size: 12px;">Subscribe</button>
